Project3/testcases/moretest24.out

*** Error line 6.
}
^
*** syntax error

