Project3/testcases/moretest24.glsl
int x;
vec2 abc;

void main() {
	x = abc.x
}

